--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img 
+     src="not empty"
+     alt="Full"
+     title="This is full and not empty"/>
+    <img 
+    src="not empty"
+    alt="Full"
+    title="This is full and not empty"/>/>
+    <img 
+     src="not empty"
+     alt="Full"
+     title="This is full and not empty"/>/>
   </body>
 </html>
